EXTRA_DIST= \
csp_c_exports.cpp \
Csp.cpp \
csp.def \
CSPErrors.cpp \
CSPErrors.h \
CspEstEid.cpp \
CSPEstEid.h \
Csp.h \
Csp_Hash.cpp \
Csp_Key.cpp \
CSPTypes.cpp \
CSPTypes.h \
esteidcsp.cpp \
esteidcsp.rc \
precompiled.cpp \
precompiled.h \
premake4.lua \
RegKey.cpp \
RegKey.h \
resource.h \
Setup.h \
sigbinary.bin \
utility.h \
version.rc
